--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 12:05:02 2018</p>
+         Last Run: Sun Nov 25 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>01:00 PM</td>
-                        <td>Clear</td>
-                        <td>0</td>
-                        <td>-2</td>
-                        <td>0</td>
-                        <td>64</td>
-                        <td>1</td>
-                        <td>6</td>
-                        <td>SSW</td>
-                        <td>17</td>
-                     </tr>
-                     <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-1</td>
+                        <td>2</td>
                         <td>0</td>
-                        <td>63</td>
+                        <td>0</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
-                        <td>11</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -65,7 +53,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM"
            ],
            "datasets":[
@@ -76,8 +63,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
-                 "-1"
+                 "0"
                ]
              },
              {
@@ -87,8 +73,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
-                 "1"
+                 "2"
                ]
              }
            ]
@@ -134,7 +119,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM"
            ],
            "datasets":[
@@ -144,7 +128,6 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
                  "0"
                ]
              },
@@ -154,8 +137,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "63"
+                 "57"
                ]
              },
              {
@@ -164,8 +146,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
-                 "11"
+                 "16"
                ]
              }
            ]
@@ -206,7 +187,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 12:05:02 2018</p>
+         Last Run: Sun Nov 25 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -234,8 +215,8 @@
                         <td>81</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
-                        <td>88</td>
+                        <td>SW</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -247,7 +228,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>89</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -255,9 +236,9 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>5</td>
-                        <td>82</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SW</td>
                         <td>88</td>
                      </tr>
@@ -370,7 +351,7 @@
                "data":[
                  "81",
                  "80",
-                 "82"
+                 "80"
                ]
              },
              {
@@ -379,8 +360,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "87",
                  "88",
-                 "89",
                  "88"
                ]
              }
@@ -421,7 +402,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 12:05:02 2018</p>
+         Last Run: Sun Nov 25 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -445,24 +426,24 @@
                         <td>Clear</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>11</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -473,8 +454,8 @@
                         <td>89</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>10</td>
+                        <td>WSW</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -572,8 +553,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
+                 "4",
+                 "4",
                  "5"
                ]
              },
@@ -594,9 +575,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "11",
-                 "10"
+                 "10",
+                 "9",
+                 "9"
                ]
              }
            ]
@@ -636,7 +617,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 12:05:02 2018</p>
+         Last Run: Sun Nov 25 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -658,38 +639,38 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>31</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
-                        <td>-5</td>
+                        <td>-6</td>
                         <td>3</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>28</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
                         <td>-2</td>
-                        <td>-5</td>
+                        <td>-6</td>
                         <td>3</td>
-                        <td>63</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>N</td>
-                        <td>25</td>
+                        <td>10</td>
+                        <td>NNW</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -717,8 +698,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-5",
-                 "-5"
+                 "-6",
+                 "-6"
                ]
              },
              {
@@ -728,7 +709,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-2",
                  "-2"
                ]
@@ -798,9 +779,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "63",
-                 "63"
+                 "66",
+                 "64",
+                 "65"
                ]
              },
              {
@@ -809,9 +790,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "28",
-                 "25"
+                 "32",
+                 "30",
+                 "27"
                ]
              }
            ]
