--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 14:05:02 2018</p>
+         Last Run: Sun Nov 25 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
-                        <td>88</td>
+                        <td>SW</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>5</td>
-                        <td>80</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>89</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
-                        <td>87</td>
+                        <td>SW</td>
+                        <td>86</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-2",
                  "-2",
-                 "-2"
+                 "-1"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "1",
                  "1",
-                 "1"
+                 "2"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "80",
-                 "79"
+                 "79",
+                 "78",
+                 "78"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
                  "89",
-                 "87"
+                 "86",
+                 "86"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 14:05:02 2018</p>
+         Last Run: Sun Nov 25 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>82</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -261,7 +261,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>85</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -273,7 +273,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>87</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "85",
-                 "87"
+                 "80",
+                 "83",
+                 "85"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 14:05:02 2018</p>
+         Last Run: Sun Nov 25 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -463,12 +463,12 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>66</td>
                         <td>1</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>41</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -484,15 +484,15 @@
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
-                        <td>-5</td>
+                        <td>-6</td>
                         <td>13</td>
                         <td>65</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>N</td>
-                        <td>60</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "-5",
                  "-5",
-                 "-5"
+                 "-6"
                ]
              },
              {
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
+                 "10",
                  "12",
                  "13"
                ]
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
+                 "40",
                  "50",
-                 "60"
+                 "59"
                ]
              }
            ]
