--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 15:05:02 2018</p>
+         Last Run: Sun Nov 25 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -37,7 +37,7 @@
                         <td>79</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
+                        <td>SSW</td>
                         <td>89</td>
                      </tr>
                      <tr>
@@ -46,10 +46,10 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
+                        <td>SSW</td>
                         <td>86</td>
                      </tr>
                      <tr>
@@ -61,7 +61,7 @@
                         <td>78</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
+                        <td>SSW</td>
                         <td>86</td>
                      </tr>
                   </tbody>
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "78",
+                 "79",
                  "78"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 15:05:02 2018</p>
+         Last Run: Sun Nov 25 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>80</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -261,7 +261,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -273,7 +273,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>85</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "83",
-                 "85"
+                 "82",
+                 "84",
+                 "87"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 15:05:02 2018</p>
+         Last Run: Sun Nov 25 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -463,11 +463,11 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>10</td>
-                        <td>66</td>
+                        <td>5</td>
+                        <td>68</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>N</td>
+                        <td>NNW</td>
                         <td>40</td>
                      </tr>
                      <tr>
@@ -475,24 +475,24 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>12</td>
-                        <td>64</td>
+                        <td>6</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>13</td>
+                        <td>6</td>
                         <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
-                 "12",
-                 "13"
+                 "5",
+                 "6",
+                 "6"
                ]
              },
              {
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "64",
+                 "68",
+                 "65",
                  "65"
                ]
              },
@@ -613,8 +613,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "40",
-                 "50",
-                 "59"
+                 "49",
+                 "58"
                ]
              }
            ]
