--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 16:05:03 2018</p>
+         Last Run: Sun Nov 25 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,11 +33,11 @@
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>79</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
+                        <td>SW</td>
                         <td>89</td>
                      </tr>
                      <tr>
@@ -46,10 +46,10 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
+                        <td>SW</td>
                         <td>86</td>
                      </tr>
                      <tr>
@@ -58,10 +58,10 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
+                        <td>SW</td>
                         <td>86</td>
                      </tr>
                   </tbody>
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "5",
                  "5",
                  "5"
                ]
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "79",
-                 "78"
+                 "78",
+                 "77"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 16:05:03 2018</p>
+         Last Run: Sun Nov 25 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,7 +261,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>84</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -273,11 +273,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>87</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "84",
-                 "87"
+                 "81",
+                 "83",
+                 "85"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
+                 "11",
                  "9",
-                 "8"
+                 "9"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 16:05:03 2018</p>
+         Last Run: Sun Nov 25 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>5</td>
-                        <td>68</td>
+                        <td>24</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>40</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
-                        <td>-5</td>
-                        <td>6</td>
-                        <td>65</td>
+                        <td>-6</td>
+                        <td>24</td>
+                        <td>64</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>N</td>
-                        <td>49</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>6</td>
+                        <td>24</td>
                         <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>58</td>
+                        <td>76</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-5",
+                 "-6",
                  "-6"
                ]
              },
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "6",
-                 "6"
+                 "24",
+                 "24",
+                 "24"
                ]
              },
              {
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "65",
+                 "67",
+                 "64",
                  "65"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "40",
-                 "49",
-                 "58"
+                 "56",
+                 "66",
+                 "76"
                ]
              }
            ]
